--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset = "UTF-8">
     <!--Title displayed on browser tab-->
     <title>Smarter Industrial</title>
-    <link rel="icon" type="image/png" href="assets/images/smarter-industrial-icon2.png" />
+    <link rel="icon" type="image/png" href="smarter-industrial-icon2.png" />
     <!--Link to stylesheet-->
-    <link rel="stylesheet" href="assets/stylesheets/main.css"> 
+    <link rel="stylesheet" href="main.css"> 
     <!--normalize stylesheet-->
-    <!-- <link rel="stylesheet" href="assets/stylesheets/main2.css"> -->
+    <!-- <link rel="stylesheet" href="main2.css"> -->
     <!--Link to Font Awesome CDN - Content Delivery Network-->
     <script src="https://kit.fontawesome.com/3b2fa6c68c.js" crossorigin="anonymous"></script>
   </head>
